<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1"
    tools:context=".MainActivity">
    <EditText
        android:hint="@string/enter_android_version"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/androidVersion"
        android:textSize="16sp"
        android:inputType="text"
        android:autofillHints="name">
    </EditText>
    <EditText
        android:hint="@string/enter_android_code_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/androidCodeName"
        android:textSize="16sp"
        android:inputType="text"
        android:autofillHints="name">
    </EditText>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/button"
        android:text="@string/add"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:id="@+id/table"
        android:background="@color/purple_200"
        >
        <TableRow>
            <TextView
                android:textColor="@color/black"
                android:text="@string/_13"
                android:paddingRight="200dp"
                android:layout_weight="1"
                />
            <TextView
                android:text="@string/tiramisu"
                android:textColor="@color/black"
                 />
        </TableRow>
        <TableRow>
            <TextView
                android:textColor="@color/black"
                android:text="@string/_12"
                android:paddingRight="200dp"
                android:layout_weight="1"
                />
            <TextView
                android:text="@string/snow_cone"
                android:textColor="@color/black"
                />
        </TableRow>
    </TableLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
